Library Project Created

--- a/ElasticSearch/appsettings.json
+++ b/ElasticSearch/appsettings.json
@@ -8,6 +8,10 @@
   },
   "AllowedHosts": "*",
   "ElasticConnectionSettings": {
-    "ElasticSearchHost": "http://localhost:9200",
+    "ConnectionString": {
+      "HostUrls": "http://localhost:9200/",
+      "UserName": "",
+      "Password": ""
+    }
   }
 }
