--- a/ElasticSearchLibrary/ElasticSearchLibrary.csproj
+++ b/ElasticSearchLibrary/ElasticSearchLibrary.csproj
@@ -2,16 +2,26 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Company>hasansahinnn</Company>
+    <Authors>hasansahinnn</Authors>
+    <Description>It is a library where you can log all the movements that occur in your application.Specific Logging. Create Index and Log Your Model.
+Catches Database Changing (Update,Delete) and Logs with Current User Id.
+Logs Selected Endpoints with Ip Address, Query or Body Params and Current User Id.
+Catches All Exception in Project and Logs with Exception Message, Status Code and Current User Id.
+Elastic Search Management Service Class. Index Management, Alias Management, Search Logs.</Description>
+    <RepositoryUrl>https://github.com/hasansahinnn/.NetCore_ElasticSearchv7_LogEverything</RepositoryUrl>
+    <RepositoryType>github</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/hasansahinnn/.NetCore_ElasticSearchv7_LogEverything</PackageProjectUrl>
+    <PackageTags>.NetCore,Elastic Search,Logging</PackageTags>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
     <PackageReference Include="NEST" Version="7.0.0" />
   </ItemGroup>
 
